<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cs360projecttwo.MainActivity">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="5"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:textSize="16sp"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/daily_weight" />

        <TextView
            android:textSize="16sp"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/goal_weight" />

        <TextView
            android:textSize="16sp"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/date_added"/>

        <TextView
            android:textSize="16sp"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:text="@string/account"/>

        <TextView
            android:textSize="16sp"
            android:layout_gravity="fill_horizontal"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/daily_weight1"
            android:layout_height="80dp"
            android:layout_gravity="fill_horizontal"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/goal_weight1"
            android:layout_height="80dp"
            android:text=""
            android:textSize="16sp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/date_added1"
            android:layout_height="80dp"
            android:textSize="12sp"
            android:text=""
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/account1"
            android:layout_height="80dp"
            android:textSize="12sp"
            android:text=""
            android:layout_gravity="fill_horizontal"/>

        <Button
            android:id="@+id/edit_box1"
            android:layout_height="48dp"
            android:layout_width="5dp"
            android:layout_gravity="fill_horizontal"
            android:text="@string/edit"
            android:enabled="false"/>

        <TextView
            android:id="@+id/daily_weight2"
            android:layout_height="80dp"
            android:text=""
            android:textSize="16sp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/goal_weight2"
            android:layout_height="80dp"
            android:text=""
            android:textSize="16sp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/date_added2"
            android:layout_height="80dp"
            android:textSize="12sp"
            android:text=""
            android:layout_gravity="fill_horizontal"/>

        <TextView
            android:id="@+id/account2"
            android:layout_height="80dp"
            android:textSize="12sp"
            android:text=""
            android:layout_gravity="fill_horizontal"/>

        <Button
            android:id="@+id/edit_box2"
            android:layout_height="48dp"
            android:layout_width="5dp"
            android:layout_gravity="fill_horizontal"
            android:text="@string/edit"
            android:enabled="false"/>

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        android:src="@android:drawable/ic_input_add"
        app:rippleColor="#4CAF50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>