<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeDataValuesActivity">

    <TextView
        android:id="@+id/current_daily_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/daily_weight"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_daily_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="100"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/current_daily_weight"
        app:layout_constraintLeft_toRightOf="@id/current_daily_weight" />

    <TextView
        android:id="@+id/current_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_daily_weight"
        android:text="@string/goal_weight"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edit_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="100"
        android:inputType="number"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/current_goal_weight"
        app:layout_constraintLeft_toRightOf="@id/current_goal_weight" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/confirm_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>